refactoring over notice module
