# src/models/notification.ts
@@ -1,29 +1,0 @@
-import {
-    Entity,
-    PrimaryGeneratedColumn,
-    Column,
-    CreateDateColumn,
-    ManyToOne,
-  } from "typeorm";
-  
-  @Entity("Notification")
-  export class Notification {
-    @Column({ name: "AreaID" })
-    @PrimaryGeneratedColumn("uuid")
-    id!: number;
-  
-    @Column({ name: "Name", length: 300 })
-    name!: string;
-  
-    @Column({ name: "Code" })
-    code!: string;
-  
-    @Column({ name: "Status", default: true })
-    isActive!: boolean;
-
-    @Column({ nullable: true, name: "Created" })
-    @CreateDateColumn()
-    createdAt!: Date;
-  }
-
-
